--- a/frontend/static/styles.css
+++ b/frontend/static/styles.css
@@ -5,7 +5,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: #f1f1f1;
-    font-family: Oxygen, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
 }
 
